# proyecto-fastapi

./: .env_example  .pre-commit-config.yaml  Estructura.md  LICENSE  main.py  pyproject.toml
.cursor/rules/: fastapi.mdc
migrations/: env.py
migrations/versions/: 96423e775d88_create_tables.py  f4cb5772bc22_drop_user_name.py
src/app/: main.py
src/app/constants/: constants.py
src/app/core/: config.py  exceptions.py  logger.py  monitoring.py  security.py
src/app/database/: engine.py  init_db.py  session.py
src/app/dependencies/: session_dep.py
src/app/middleware/: http_error_handler.py  request_middleware.py
src/app/models/: item.py  user.py
src/app/repositories/: global_repository.py  item_repository.py  user_repository.py
src/app/routes/v1/: example_one.py  items.py  users.py
src/app/schemas/: items.py  users.py
src/app/services/: item_service.py  user_service.py
